--- a/index.html
+++ b/index.html
@@ -98,12 +98,68 @@
             </li>
           </ul>
           <header id="header">
-            <a href="index.html" class="logo"
-              ><img
-                src="images/logo_dark.webp"
-                alt="Coastal Property Management Logo"
-                width="300"
-            /></a>
+            <a href="index.html" class="logo">
+              <svg height="350px" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                  <filter
+                    id="bloom"
+                    x="-50%"
+                    y="-50%"
+                    width="200%"
+                    height="200%"
+                  >
+                    <feGaussianBlur
+                      in="SourceAlpha"
+                      stdDeviation="10"
+                      result="blur"
+                    />
+                    <!-- Increased blur for bigger bloom -->
+                    <feFlood
+                      flood-color="#3bccc5"
+                      flood-opacity="1"
+                      result="color"
+                    />
+                    <!-- Changed color to teal and reduced opacity -->
+                    <feComposite
+                      in="color"
+                      in2="blur"
+                      operator="in"
+                      result="glow"
+                    />
+                    <feMerge>
+                      <feMergeNode in="glow" />
+                      <feMergeNode in="SourceGraphic" />
+                    </feMerge>
+                  </filter>
+                  <filter
+                    id="shadow"
+                    x="-10%"
+                    y="-10%"
+                    width="130%"
+                    height="130%"
+                  >
+                    <feOffset in="SourceAlpha" dx="5" dy="5" result="offset" />
+                    <feGaussianBlur
+                      in="offset"
+                      stdDeviation="3"
+                      result="shadowBlur"
+                    />
+                    <feFlood flood-color="black" flood-opacity="0.5" />
+                    <feComposite in2="shadowBlur" operator="in" />
+                    <feMerge>
+                      <feMergeNode />
+                      <feMergeNode in="SourceGraphic" />
+                    </feMerge>
+                  </filter>
+                </defs>
+                <image
+                  filter="url(#bloom) url(#shadow)"
+                  href="images/logo_dark.svg"
+                  width="100%"
+                  height="100%"
+                />
+              </svg>
+            </a>
           </header>
           <section id="banner">
             <div class="content">
