--- a/index.html
+++ b/index.html
@@ -163,6 +163,14 @@
           </header>
           <section id="banner">
             <div class="content">
+              <div class="image-placeholder-container">
+                <div class="image image-placeholder" style="margin: 0">
+                  <img
+                    src="images/placeholders/skyline_illustration.webp"
+                    alt="Skyline"
+                  />
+                </div>
+              </div>
               <h1>Welcome to</h1>
               <h2>Coastal Property Management</h2>
               <p>
