--- a/contactus.html
+++ b/contactus.html
@@ -315,5 +315,20 @@
         document.body.classList.add("fade-in");
       });
     </script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const header = document.querySelector('#header');
+        const images = document.querySelectorAll('.image.image-placeholder');
+    
+        // Directly add the 'animate' class to the header and images without checking sessionStorage
+        if (header) {
+          header.classList.add('animate');
+        }
+    
+        images.forEach(image => {
+          image.classList.add('animate');
+        });
+      });
+    </script>
   </body>
 </html>
