--- a/about.html
+++ b/about.html
@@ -370,23 +370,43 @@
       });
     </script>
 <script>
-  function setUpAnimations() {
-    const header = document.querySelector('#header');
-    const images = document.querySelectorAll('.image.image-placeholder');
+function isInViewport(element) {
+  const rect = element.getBoundingClientRect();
+  return (
+    rect.top >= 0 &&
+    rect.left >= 0 &&
+    rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+    rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+  );
+}
 
-    if (header) {
+function setUpAnimations() {
+  const header = document.querySelector('#header');
+  const images = document.querySelectorAll('.image.image-placeholder');
+
+  function addAnimation() {
+    if (header && isInViewport(header)) {
       header.classList.add('animate');
     }
 
     images.forEach(image => {
-      image.classList.add('animate');
+      if (isInViewport(image)) {
+        image.classList.add('animate');
+      }
     });
-
-    // Remove the event listener to prevent re-adding classes
-    document.removeEventListener('DOMContentLoaded', setUpAnimations);
   }
 
-  document.addEventListener('DOMContentLoaded', setUpAnimations);
+  // Initial check and set up
+  addAnimation();
+
+  // Event listener for scroll
+  document.addEventListener('scroll', addAnimation);
+
+  // Remove the initial event listener to prevent re-adding classes
+  document.removeEventListener('DOMContentLoaded', setUpAnimations);
+}
+
+document.addEventListener('DOMContentLoaded', setUpAnimations);
 </script>
   </body>
 </html>
