--- a/contactus.html
+++ b/contactus.html
@@ -316,44 +316,61 @@
       });
     </script>
 <script>
+function debounce(func, wait, immediate) {
+    var timeout;
+    return function() {
+        var context = this, args = arguments;
+        var later = function() {
+            timeout = null;
+            if (!immediate) func.apply(context, args);
+        };
+        var callNow = immediate && !timeout;
+        clearTimeout(timeout);
+        timeout = setTimeout(later, wait);
+        if (callNow) func.apply(context, args);
+    };
+}
+
 function isInViewport(element) {
-  const rect = element.getBoundingClientRect();
-  return (
-    rect.top >= 0 &&
-    rect.left >= 0 &&
-    rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-    rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-  );
+    const rect = element.getBoundingClientRect();
+    return (
+        rect.top >= 0 &&
+        rect.left >= 0 &&
+        rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+        rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+    );
 }
 
 function setUpAnimations() {
-  const header = document.querySelector('#header');
-  const images = document.querySelectorAll('.image.image-placeholder');
+    const header = document.querySelector('#header');
+    const images = document.querySelectorAll('.image.image-placeholder');
 
-  function addAnimation() {
-    if (header && isInViewport(header)) {
-      header.classList.add('animate');
+    function addAnimation() {
+        if (header && isInViewport(header) && !header.classList.contains('animate')) {
+            header.classList.add('animate');
+        }
+
+        images.forEach(image => {
+            if (isInViewport(image) && !image.classList.contains('animate')) {
+                image.classList.add('animate');
+            }
+        });
     }
 
-    images.forEach(image => {
-      if (isInViewport(image)) {
-        image.classList.add('animate');
-      }
-    });
-  }
+    // Debounce the scroll handler
+    const debouncedAddAnimation = debounce(addAnimation, 20);
 
-  // Initial check and set up
-  addAnimation();
+    // Initial check and set up
+    addAnimation();
 
-  // Event listener for scroll
-  document.addEventListener('scroll', addAnimation);
+    // Event listener for scroll
+    document.addEventListener('scroll', debouncedAddAnimation);
 
-  // Remove the initial event listener to prevent re-adding classes
-  document.removeEventListener('DOMContentLoaded', setUpAnimations);
+    // Remove the initial event listener to prevent re-adding classes
+    document.removeEventListener('DOMContentLoaded', setUpAnimations);
 }
 
 document.addEventListener('DOMContentLoaded', setUpAnimations);
-
 </script>
   </body>
 </html>
