--- a/services.html
+++ b/services.html
@@ -1,157 +1,341 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-   <head>
-      <title>Coastal Property Management</title>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-      <link rel="stylesheet" href="assets/css/main.css" />
-	  <link rel="stylesheet" href="assets/css/styles.css" />
-	  <!-- Standard favicon -->
-      <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-	  <!-- Apple Touch Icon -->
-	  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-	  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-	  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-	   <!-- Android Chrome Icons -->
-	   <link rel="icon" type="image/png" sizes="192x192" href="/images/android-chrome-192x192.png">
-	   <link rel="icon" type="image/png" sizes="512x512" href="/images/android-chrome-512x512.png">
-	   <!-- Manifest File -->
-	   <link rel="manifest" href="/images/site.webmanifest">
-   </head>
-   <body class="is-preload">
-      <!-- Wrapper -->
-      <div id="wrapper">
-         <!-- Main -->
-         <div id="main">
-            <div class="inner">
-               <ul class="icons social-icons">
-                  <li><a href="https://www.facebook.com/coastalpmca/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                  <li><a href="#" class="icon brands fa-instagram" target="_blank > <span class="label">Instagram</span></a></li>
-               </ul>
-               <!-- Header -->
-               <header id="header">
-                  <a href="index.html" class="logo">
-                  <img src="images/logo.png" alt="Coastal Property Management Logo" width="200" height="200">
-                  </a>
-               </header>
-							<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>What We Do Best</h2>
-								</header>
-								<div class="features">
-									<article>
-										<span class="icon fa-building"></span>
-										<div class="content">
-											<h3>Property Management</h3>
-											<p>Our approach simplifies property ownership, offering full-scale management solutions designed to keep your tenants satisfied and your investments prosperous.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-hammer"></span>
-										<div class="content">
-											<h3>Construction Services</h3>
-											<p>We take on projects big and small, from detailed renovations to essential repairs, always focusing on delivering high-quality work without cutting corners.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-tree"></span>
-										<div class="content">
-											<h3>Landscaping Services</h3>
-											<p>Our landscaping team works magic on outdoor spaces, creating beautiful, sustainable environments that reflect your taste and lifestyle.</p>
-										</div>
-									</article>
-								</div>
-							</section>
-							<section>
-								<header class="major">
-									<h2>What Sets Us Apart</h2>
-								</header>
-								<div class="features">
-									<article>
-										<span class="icon solid fa-dollar-sign"></span>
-										<div class="content">
-											<h3>Fair Pricing</h3>
-											<p>We believe in honest, transparent pricing. Quality work doesn't have to break the bank, and we're committed to providing excellent service at fair, competitive rates.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-headset"></span>
-										<div class="content">
-											<h3>Unmatched Customer Support</h3>
-											<p>Your peace of mind is our top priority. From the initial consultation to the completion of your project, we're here for you, ready to answer any questions and ensure your experience is as smooth and stress-free as possible.</p>
-										</div>
-									</article>
-								</div>
-							</section>
-							
+  <head>
+    <title>Coastal Property Management</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&family=Merriweather:wght@400;700&family=Fira+Code&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <!--<link rel="stylesheet" href="assets/css/styles.css" />-->
+    <!-- Standard favicon -->
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <!-- Apple Touch Icon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/images/favicon-16x16.png"
+    />
+    <!-- Android Chrome Icons -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/images/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/images/android-chrome-512x512.png"
+    />
+    <!-- Manifest File -->
+    <link rel="manifest" href="/images/site.webmanifest" />
+  </head>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
+          <ul class="icons social-icons">
+            <li>
+              <a
+                href="https://www.facebook.com/coastalpmca/"
+                target="_blank"
+                class="icon brands fa-facebook-f"
+                ><span class="label">Facebook</span></a
+              >
+            </li>
+            <li>
+              <a href="#" class="icon brands fa-instagram"
+                ><span class="label">Instagram</span></a
+              >
+            </li>
+          </ul>
+          <!-- Header -->
+          <header id="header">
+            <a href="index.html" class="logo">
+              <svg height="350px" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                  <filter
+                    id="bloom"
+                    x="-50%"
+                    y="-50%"
+                    width="200%"
+                    height="200%"
+                  >
+                    <feGaussianBlur
+                      in="SourceAlpha"
+                      stdDeviation="10"
+                      result="blur"
+                    />
+                    <!-- Increased blur for bigger bloom -->
+                    <feFlood
+                      flood-color="#3bccc5"
+                      flood-opacity="1"
+                      result="color"
+                    />
+                    <!-- Changed color to teal and reduced opacity -->
+                    <feComposite
+                      in="color"
+                      in2="blur"
+                      operator="in"
+                      result="glow"
+                    />
+                    <feMerge>
+                      <feMergeNode in="glow" />
+                      <feMergeNode in="SourceGraphic" />
+                    </feMerge>
+                  </filter>
+                  <filter
+                    id="shadow"
+                    x="-10%"
+                    y="-10%"
+                    width="130%"
+                    height="130%"
+                  >
+                    <feOffset in="SourceAlpha" dx="5" dy="5" result="offset" />
+                    <feGaussianBlur
+                      in="offset"
+                      stdDeviation="3"
+                      result="shadowBlur"
+                    />
+                    <feFlood flood-color="black" flood-opacity="0.5" />
+                    <feComposite in2="shadowBlur" operator="in" />
+                    <feMerge>
+                      <feMergeNode />
+                      <feMergeNode in="SourceGraphic" />
+                    </feMerge>
+                  </filter>
+                </defs>
+                <image
+                  filter="url(#bloom) url(#shadow)"
+                  href="images/logo_dark.svg"
+                  width="100%"
+                  height="100%"
+                />
+              </svg>
+            </a>
+          </header>
+          <!-- Section -->
+          <section>
+            <header class="major">
+              <h2>What We Do Best</h2>
+            </header>
+            <div class="features">
+              <article>
+                <span class="icon fa-building"></span>
+                <div class="content">
+                  <h3>Property Management</h3>
+                  <p>
+                    Our approach simplifies property ownership, offering
+                    full-scale management solutions designed to keep your
+                    tenants satisfied and your investments prosperous.
+                  </p>
+                </div>
+              </article>
+              <article>
+                <span class="icon solid fa-hammer"></span>
+                <div class="content">
+                  <h3>Construction Services</h3>
+                  <p>
+                    We take on projects big and small, from detailed renovations
+                    to essential repairs, always focusing on delivering
+                    high-quality work without cutting corners.
+                  </p>
+                </div>
+              </article>
+              <article>
+                <span class="icon solid fa-tree"></span>
+                <div class="content">
+                  <h3>Landscaping Services</h3>
+                  <p>
+                    Our landscaping team works magic on outdoor spaces, creating
+                    beautiful, sustainable environments that reflect your taste
+                    and lifestyle.
+                  </p>
+                </div>
+              </article>
+              <article class="image-placeholder-container">
+                <div class="image image-placeholder">
+                  <img
+                    src="images/placeholders/give-5242150_640.webp"
+                    alt="Handing over keys"
+                  />
+                  <span class="image-caption">Turn-key solutions</span>
+                </div>
+              </article>
+            </div>
+          </section>
+          <section>
+            <header class="major">
+              <h2>What Sets Us Apart</h2>
+            </header>
+            <div class="features">
+              <article>
+                <span class="icon solid fa-dollar-sign"></span>
+                <div class="content">
+                  <h3>Fair Pricing</h3>
+                  <p>
+                    We believe in honest, transparent pricing. Quality work
+                    doesn't have to break the bank, and we're committed to
+                    providing excellent service at fair, competitive rates.
+                  </p>
+                </div>
+              </article>
+              <article>
+                <span class="icon solid fa-headset"></span>
+                <div class="content">
+                  <h3>Unmatched Customer Support</h3>
+                  <p>
+                    Your peace of mind is our top priority. From the initial
+                    consultation to the completion of your project, we're here
+                    for you, ready to answer any questions and ensure your
+                    experience is as smooth and stress-free as possible.
+                  </p>
+                </div>
+              </article>
+              <article class="image-placeholder-container">
+                <div class="image image-placeholder">
+                  <img
+                    src="images/placeholders/money-2696229_640.webp"
+                    alt="Money, time"
+                  />
+                  <span class="image-caption"
+                    >Fair pricing and efficient service</span
+                  >
+                </div>
+              </article>
+            </div>
+          </section>
 
-							<!-- Section -->
-					
+          <!-- Section -->
+        </div>
+      </div>
 
-						</div>
-					</div>
-
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
-
-
-
-							<!-- Menu -->
-							<nav id="menu">
-								<header class="major">
-									<h2>Menu</h2>
-								</header>
-								<ul>
-									<li><a href="index.html">Homepage</a></li>
-									<li><a href="services.html">Services</a></li>
-									<li><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new">Rental Application</a></li>
-									<li><a href="contactus.html">Contact Us</a></li>
-									<li style="margin-top: 20px;">
-										<button style="padding: 20px; background-color: rgba(75, 73, 73, 0.63); color: white; font-weight: bold; width: 60%; display: flex; align-items: center; justify-content: center;"><a href="Buildium Client" style="color: white; text-decoration: none;">Client Login</a></button>
-									</li>
-									<li style="margin-top: 20px; border-top: 3px solid white;">
-										<button style="padding: 10px; background-color: rgba(75, 73, 73, 0.63); color: white; font-weight: bold; width: 60%; display: flex; align-items: center; justify-content: center;"><a href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal" style="color: white; text-decoration: none;">Tenant Login</a></button>
-									</li>
-								</ul>
-							</nav>
-
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
-									<p>Hey there! Whether it's managing properties, tackling construction projects, or beautifying landscapes, we've got you covered. Let's bring your vision to life – reach out and let's make it happen!</p>
-									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">info@coastalpm.ca</a></li>
-										<li class="icon solid fa-phone">506-709-0420</li>
-										<li class="icon solid fa-home">Grand Bay-Westfield</li>
-										<li class="icon solid fa-wrench">Also serving Saint John, Rothesay, Quispamsis</li>
-
-									</ul>
-								</section>
-
-							<!-- Footer -->
-								<footer id="footer">
-									<p>&copy; <span id="currentYear"></span> Coastal Property Management. All rights reserved.</p>
-								</footer>
-								<script>
-									document.getElementById("currentYear").innerHTML = new Date().getFullYear();
-								  </script>
-
-						</div>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+      <!-- Sidebar -->
+      <div id="sidebar">
+        <div class="inner">
+          <!-- Menu -->
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul>
+              <li>
+                <a href="index.html"
+                  >Homepage <i class="fa fa-home" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="about.html"
+                  >About Us <i class="fa fa-info-circle" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a href="services.html"
+                  >Services <i class="fa fa-cogs" aria-hidden="true"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
+                  target="_blank"
+                >
+                  Rental Application
+                  <i class="fa fa-file-alt" aria-hidden="true"></i>
+                </a>
+              </li>
+              <li>
+                <a href="contactus.html"
+                  >Contact Us <i class="fa fa-envelope" aria-hidden="true"></i
+                ></a>
+              </li>
+            </ul>
+            <div class="sidebar-buttons">
+              <a href="Buildium Client">
+                <button class="sidebar-button">
+                  <i class="fa fa-user" aria-hidden="true"></i> Client Login
+                </button>
+              </a>
+              <a
+                href="https://coastalpropertymanagementgb.managebuilding.com/Resident/portal"
+                target="_blank"
+              >
+                <button class="sidebar-button">
+                  <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Tenant
+                  Login
+                </button>
+              </a>
+            </div>
+          </nav>
+          <!-- Section -->
+          <section>
+            <header class="major">
+              <h2>
+                <i class="fa fa-phone" aria-hidden="true"></i> Get in touch
+              </h2>
+            </header>
+            <p>
+              Hey there! Whether it's managing properties, tackling construction
+              projects, or beautifying landscapes, we've got you covered. Let's
+              bring your vision to life – reach out and let's make it happen!
+            </p>
+            <ul class="contact">
+              <li class="icon solid fa-envelope">
+                <a href="mailto:info@coastalpm.ca">info@coastalpm.ca</a>
+              </li>
+              <li class="icon solid fa-phone">
+                <a href="tel:5067090420">506-709-0420</a>
+              </li>
+              <li class="icon solid fa-home">Grand Bay-Westfield</li>
+              <li class="icon solid fa-wrench">
+                Also serving Saint John, Rothesay, Quispamsis
+              </li>
+            </ul>
+          </section>
+          <footer id="footer">
+            <p class="copyright">
+              &copy; <span id="currentYear"></span> Coastal Property Management.
+              All rights reserved.
+            </p>
+          </footer>
+        </div>
+      </div>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script>
+      document.getElementById("currentYear").innerHTML =
+        new Date().getFullYear();
+    </script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document.body.classList.add("fade-in");
+      });
+    </script>
+<script src="/assets/js/animations.js"></script>
+  </body>
 </html>
