logo, toggle and icons

--- a/about.html
+++ b/about.html
@@ -97,66 +97,27 @@
             <a href="index.html" class="logo">
               <svg height="350px" xmlns="http://www.w3.org/2000/svg">
                 <defs>
-                  <filter
-                    id="bloom"
-                    x="-50%"
-                    y="-50%"
-                    width="200%"
-                    height="200%"
-                  >
-                    <feGaussianBlur
-                      in="SourceAlpha"
-                      stdDeviation="10"
-                      result="blur"
-                    />
-                    <!-- Increased blur for bigger bloom -->
-                    <feFlood
-                      flood-color="#3bccc5"
-                      flood-opacity="1"
-                      result="color"
-                    />
-                    <!-- Changed color to teal and reduced opacity -->
-                    <feComposite
-                      in="color"
-                      in2="blur"
-                      operator="in"
-                      result="glow"
-                    />
+                  <filter id="bloom" x="-50%" y="-50%" width="200%" height="200%">
+                    <feGaussianBlur in="SourceAlpha" stdDeviation="5" result="blur">
+                      <!-- Animate the standard deviation for a more noticeable bloom effect -->
+                      <animate attributeName="stdDeviation" values="10; 20; 10" dur="12s" repeatCount="indefinite"/>
+                    </feGaussianBlur>
+                    <feFlood flood-color="#3bccc5" flood-opacity="0.6" result="color">
+                      <!-- Animate opacity and color shift with a more dramatic effect -->
+                      <animate attributeName="flood-opacity" values="0.5; 0.5; 0.5" dur="12s" repeatCount="indefinite"/>
+                      <animate attributeName="flood-color" values="#3bccc5; #FF7F50; #3bccc5" dur="12s" repeatCount="indefinite"/>
+                    </feFlood>
+                    <feComposite in="color" in2="blur" operator="in" result="glow"/>
                     <feMerge>
-                      <feMergeNode in="glow" />
-                      <feMergeNode in="SourceGraphic" />
-                    </feMerge>
-                  </filter>
-                  <filter
-                    id="shadow"
-                    x="-10%"
-                    y="-10%"
-                    width="130%"
-                    height="130%"
-                  >
-                    <feOffset in="SourceAlpha" dx="5" dy="5" result="offset" />
-                    <feGaussianBlur
-                      in="offset"
-                      stdDeviation="3"
-                      result="shadowBlur"
-                    />
-                    <feFlood flood-color="black" flood-opacity="0.5" />
-                    <feComposite in2="shadowBlur" operator="in" />
-                    <feMerge>
-                      <feMergeNode />
-                      <feMergeNode in="SourceGraphic" />
+                      <feMergeNode in="glow"/>
+                      <feMergeNode in="SourceGraphic"/>
                     </feMerge>
                   </filter>
                 </defs>
-                <image
-                  filter="url(#bloom) url(#shadow)"
-                  href="images/logo_dark.svg"
-                  width="100%"
-                  height="100%"
-                />
+                <image filter="url(#bloom)" href="images/logo_dark.svg" width="100%" height="100%"/>
               </svg>
             </a>
-          </header>
+          </header> 
           <section id="banner">
             <div class="content">
               <h1>About Us</h1>
@@ -278,32 +239,33 @@
             </header>
             <ul>
               <li>
-                <a href="index.html"
-                  >Homepage <i class="fa fa-home" aria-hidden="true"></i
-                ></a>
+                <a href="index.html">
+                  <i class="fa fa-home" aria-hidden="true"></i> Homepage
+                </a>
               </li>
               <li>
-                <a href="about.html"
-                  >About Us <i class="fa fa-info-circle" aria-hidden="true"></i
-                ></a>
+                <a href="about.html">
+                  <i class="fa fa-info-circle" aria-hidden="true"></i> About Us
+                </a>
               </li>
               <li>
-                <a href="services.html"
-                  >Services <i class="fa fa-cogs" aria-hidden="true"></i
-                ></a>
+                <a href="services.html">
+                  <i class="fa fa-cogs" aria-hidden="true"></i> Services
+                </a>
               </li>
               <li>
                 <a
                   href="https://coastalpropertymanagementgb.managebuilding.com/Resident/rental-application/new"
                   target="_blank"
-                  >Rental Application
-                  <i class="fa fa-file-alt" aria-hidden="true"></i
-                ></a>
+                >
+                  <i class="fa fa-file-alt" aria-hidden="true"></i> Rental
+                  Application
+                </a>
               </li>
               <li>
-                <a href="contactus.html"
-                  >Contact Us <i class="fa fa-envelope" aria-hidden="true"></i
-                ></a>
+                <a href="contactus.html">
+                  <i class="fa fa-envelope" aria-hidden="true"></i> Contact Us
+                </a>
               </li>
             </ul>
             <div class="sidebar-buttons">
@@ -369,6 +331,6 @@
         document.body.classList.add("fade-in");
       });
     </script>
-<script src="/assets/js/animations.js"></script>
+    <script src="/assets/js/animations.js"></script>
   </body>
 </html>
